--- a/UI/mainScreen.ui
+++ b/UI/mainScreen.ui
@@ -23,6 +23,9 @@
    <layout class="QVBoxLayout" name="verticalLayout">
     <item>
      <widget class="QScrollArea" name="scrollArea">
+      <property name="styleSheet">
+       <string notr="true"/>
+      </property>
       <property name="widgetResizable">
        <bool>true</bool>
       </property>
@@ -30,7 +33,7 @@
        <property name="geometry">
         <rect>
          <x>0</x>
-         <y>-165</y>
+         <y>0</y>
          <width>1243</width>
          <height>1448</height>
         </rect>
@@ -165,22 +168,26 @@
                </widget>
               </item>
               <item row="1" column="0">
-               <widget class="QLineEdit" name="lineEdit_11"/>
+               <widget class="QSpinBox" name="spinBox_2"/>
               </item>
               <item row="1" column="1">
-               <widget class="QLineEdit" name="lineEdit_12"/>
+               <widget class="QSpinBox" name="spinBox_3"/>
               </item>
               <item row="1" column="2">
-               <widget class="QLineEdit" name="lineEdit_13"/>
+               <widget class="QSpinBox" name="spinBox_4"/>
               </item>
               <item row="1" column="3">
-               <widget class="QLineEdit" name="lineEdit_14"/>
+               <widget class="QSpinBox" name="spinBox_5"/>
               </item>
               <item row="1" column="4">
-               <widget class="QLineEdit" name="lineEdit_15"/>
+               <widget class="QSpinBox" name="spinBox_6"/>
               </item>
               <item row="1" column="5">
-               <widget class="QLineEdit" name="lineEdit_16"/>
+               <widget class="QSpinBox" name="spinBox_7">
+                <property name="maximum">
+                 <number>30</number>
+                </property>
+               </widget>
               </item>
              </layout>
             </widget>
@@ -203,22 +210,6 @@
               <property name="sizeConstraint">
                <enum>QLayout::SetDefaultConstraint</enum>
               </property>
-              <item row="4" column="4">
-               <widget class="QLineEdit" name="lineEdit_2"/>
-              </item>
-              <item row="1" column="1">
-               <spacer name="horizontalSpacer_3">
-                <property name="orientation">
-                 <enum>Qt::Horizontal</enum>
-                </property>
-                <property name="sizeHint" stdset="0">
-                 <size>
-                  <width>40</width>
-                  <height>20</height>
-                 </size>
-                </property>
-               </spacer>
-              </item>
               <item row="5" column="3">
                <widget class="QLabel" name="label_9">
                 <property name="text">
@@ -239,9 +230,6 @@
                 </property>
                </spacer>
               </item>
-              <item row="5" column="4">
-               <widget class="QLineEdit" name="lineEdit_4"/>
-              </item>
               <item row="0" column="0">
                <widget class="QLabel" name="label_13">
                 <property name="maximumSize">
@@ -255,13 +243,6 @@
                 </property>
                </widget>
               </item>
-              <item row="4" column="2">
-               <widget class="QLineEdit" name="lineEdit">
-                <property name="text">
-                 <string/>
-                </property>
-               </widget>
-              </item>
               <item row="0" column="2">
                <widget class="QLineEdit" name="lineEdit_6">
                 <property name="text">
@@ -269,8 +250,37 @@
                 </property>
                </widget>
               </item>
+              <item row="4" column="2">
+               <widget class="QSpinBox" name="spinBox"/>
+              </item>
               <item row="8" column="2">
-               <widget class="QLineEdit" name="lineEdit_5"/>
+               <widget class="QComboBox" name="comboBox_3">
+                <item>
+                 <property name="text">
+                  <string>Small</string>
+                 </property>
+                </item>
+                <item>
+                 <property name="text">
+                  <string>Med</string>
+                 </property>
+                </item>
+                <item>
+                 <property name="text">
+                  <string>Large</string>
+                 </property>
+                </item>
+               </widget>
+              </item>
+              <item row="11" column="0">
+               <widget class="QLineEdit" name="sliderValTxt">
+                <property name="maximumSize">
+                 <size>
+                  <width>115</width>
+                  <height>16777215</height>
+                 </size>
+                </property>
+               </widget>
               </item>
               <item row="9" column="3">
                <widget class="QLabel" name="label_12">
@@ -281,9 +291,6 @@
               </item>
               <item row="9" column="2">
                <widget class="QLineEdit" name="lineEdit_7"/>
-              </item>
-              <item row="5" column="2">
-               <widget class="QLineEdit" name="lineEdit_3"/>
               </item>
               <item row="9" column="0">
                <widget class="QLabel" name="label_5">
@@ -329,6 +336,22 @@
                  </property>
                 </item>
                </widget>
+              </item>
+              <item row="1" column="1">
+               <spacer name="horizontalSpacer_3">
+                <property name="orientation">
+                 <enum>Qt::Horizontal</enum>
+                </property>
+                <property name="sizeType">
+                 <enum>QSizePolicy::Expanding</enum>
+                </property>
+                <property name="sizeHint" stdset="0">
+                 <size>
+                  <width>0</width>
+                  <height>20</height>
+                 </size>
+                </property>
+               </spacer>
               </item>
               <item row="9" column="4">
                <widget class="QComboBox" name="comboBox">
@@ -407,9 +430,6 @@
                 </property>
                </widget>
               </item>
-              <item row="10" column="2">
-               <widget class="QLineEdit" name="lineEdit_9"/>
-              </item>
               <item row="1" column="4">
                <spacer name="horizontalSpacer_6">
                 <property name="orientation">
@@ -452,7 +472,7 @@
                </widget>
               </item>
               <item row="11" column="1" colspan="2">
-               <widget class="QSlider" name="horizontalSlider">
+               <widget class="QSlider" name="slider">
                 <property name="orientation">
                  <enum>Qt::Horizontal</enum>
                 </property>
@@ -461,15 +481,17 @@
                 </property>
                </widget>
               </item>
-              <item row="11" column="0">
-               <widget class="QLineEdit" name="sliderValTxt">
-                <property name="maximumSize">
-                 <size>
-                  <width>115</width>
-                  <height>16777215</height>
-                 </size>
-                </property>
-               </widget>
+              <item row="5" column="2">
+               <widget class="QSpinBox" name="spinBox_8"/>
+              </item>
+              <item row="5" column="4">
+               <widget class="QSpinBox" name="spinBox_9"/>
+              </item>
+              <item row="4" column="4">
+               <widget class="QSpinBox" name="spinBox_10"/>
+              </item>
+              <item row="10" column="2">
+               <widget class="QLineEdit" name="lineEdit_9"/>
               </item>
              </layout>
             </widget>
