--- a/UI/mainScreen.ui
+++ b/UI/mainScreen.ui
@@ -70,7 +70,7 @@
              </property>
              <layout class="QGridLayout" name="gridLayout_3">
               <item row="0" column="1">
-               <widget class="QLineEdit" name="lineEdit_8"/>
+               <widget class="QLineEdit" name="nameLineEdit"/>
               </item>
               <item row="0" column="0">
                <widget class="QLabel" name="label_14">
@@ -87,7 +87,7 @@
                </widget>
               </item>
               <item row="1" column="1">
-               <widget class="QLineEdit" name="lineEdit_10"/>
+               <widget class="QLineEdit" name="speedLineEdit"/>
               </item>
              </layout>
             </widget>
@@ -168,22 +168,22 @@
                </widget>
               </item>
               <item row="1" column="0">
-               <widget class="QSpinBox" name="spinBox_2"/>
+               <widget class="QSpinBox" name="strSpinBox"/>
               </item>
               <item row="1" column="1">
-               <widget class="QSpinBox" name="spinBox_3"/>
+               <widget class="QSpinBox" name="dexSpinBox"/>
               </item>
               <item row="1" column="2">
-               <widget class="QSpinBox" name="spinBox_4"/>
+               <widget class="QSpinBox" name="conSpinBox"/>
               </item>
               <item row="1" column="3">
-               <widget class="QSpinBox" name="spinBox_5"/>
+               <widget class="QSpinBox" name="intSpinBox"/>
               </item>
               <item row="1" column="4">
-               <widget class="QSpinBox" name="spinBox_6"/>
+               <widget class="QSpinBox" name="wisSpinBox"/>
               </item>
               <item row="1" column="5">
-               <widget class="QSpinBox" name="spinBox_7">
+               <widget class="QSpinBox" name="chaSpinBox">
                 <property name="maximum">
                  <number>30</number>
                 </property>
@@ -210,131 +210,11 @@
               <property name="sizeConstraint">
                <enum>QLayout::SetDefaultConstraint</enum>
               </property>
-              <item row="5" column="3">
-               <widget class="QLabel" name="label_9">
+              <item row="10" column="5">
+               <widget class="QLabel" name="label_11">
                 <property name="text">
-                 <string>Attack Bonus/Save DC:</string>
+                 <string>Flies and can deal damage at range (CR 0-9 only):</string>
                 </property>
-               </widget>
-              </item>
-              <item row="1" column="2">
-               <spacer name="horizontalSpacer_4">
-                <property name="orientation">
-                 <enum>Qt::Horizontal</enum>
-                </property>
-                <property name="sizeHint" stdset="0">
-                 <size>
-                  <width>40</width>
-                  <height>20</height>
-                 </size>
-                </property>
-               </spacer>
-              </item>
-              <item row="0" column="0">
-               <widget class="QLabel" name="label_13">
-                <property name="maximumSize">
-                 <size>
-                  <width>16777215</width>
-                  <height>40</height>
-                 </size>
-                </property>
-                <property name="text">
-                 <string>Expected CR:</string>
-                </property>
-               </widget>
-              </item>
-              <item row="0" column="2">
-               <widget class="QLineEdit" name="lineEdit_6">
-                <property name="text">
-                 <string>0</string>
-                </property>
-               </widget>
-              </item>
-              <item row="4" column="2">
-               <widget class="QSpinBox" name="spinBox"/>
-              </item>
-              <item row="8" column="2">
-               <widget class="QComboBox" name="comboBox_3">
-                <item>
-                 <property name="text">
-                  <string>Small</string>
-                 </property>
-                </item>
-                <item>
-                 <property name="text">
-                  <string>Med</string>
-                 </property>
-                </item>
-                <item>
-                 <property name="text">
-                  <string>Large</string>
-                 </property>
-                </item>
-               </widget>
-              </item>
-              <item row="11" column="0">
-               <widget class="QLineEdit" name="sliderValTxt">
-                <property name="maximumSize">
-                 <size>
-                  <width>115</width>
-                  <height>16777215</height>
-                 </size>
-                </property>
-               </widget>
-              </item>
-              <item row="9" column="3">
-               <widget class="QLabel" name="label_12">
-                <property name="text">
-                 <string>Resistances/Immunities:</string>
-                </property>
-               </widget>
-              </item>
-              <item row="9" column="2">
-               <widget class="QLineEdit" name="lineEdit_7"/>
-              </item>
-              <item row="9" column="0">
-               <widget class="QLabel" name="label_5">
-                <property name="text">
-                 <string>Hit Dice:</string>
-                </property>
-               </widget>
-              </item>
-              <item row="1" column="3">
-               <widget class="QLabel" name="label_8">
-                <property name="font">
-                 <font>
-                  <pointsize>20</pointsize>
-                 </font>
-                </property>
-                <property name="text">
-                 <string>Offenisive</string>
-                </property>
-               </widget>
-              </item>
-              <item row="5" column="0">
-               <widget class="QLabel" name="label_3">
-                <property name="text">
-                 <string>Armor Class:</string>
-                </property>
-               </widget>
-              </item>
-              <item row="11" column="4">
-               <widget class="QComboBox" name="comboBox_2">
-                <item>
-                 <property name="text">
-                  <string>0-2</string>
-                 </property>
-                </item>
-                <item>
-                 <property name="text">
-                  <string>3-4</string>
-                 </property>
-                </item>
-                <item>
-                 <property name="text">
-                  <string>5-6</string>
-                 </property>
-                </item>
                </widget>
               </item>
               <item row="1" column="1">
@@ -353,41 +233,24 @@
                 </property>
                </spacer>
               </item>
-              <item row="9" column="4">
-               <widget class="QComboBox" name="comboBox">
-                <item>
-                 <property name="text">
-                  <string>None</string>
-                 </property>
-                </item>
-                <item>
-                 <property name="text">
-                  <string>Resistances</string>
-                 </property>
-                </item>
-                <item>
-                 <property name="text">
-                  <string>Immunities</string>
-                 </property>
-                </item>
-               </widget>
-              </item>
-              <item row="4" column="0">
-               <widget class="QLabel" name="label_2">
-                <property name="font">
-                 <font>
-                  <pointsize>12</pointsize>
-                 </font>
-                </property>
+              <item row="9" column="5">
+               <widget class="QLabel" name="label_12">
                 <property name="text">
-                 <string>Hit Points:</string>
+                 <string>Resistances/Immunities:</string>
                 </property>
                </widget>
               </item>
-              <item row="7" column="4">
-               <widget class="QCheckBox" name="checkBox">
+              <item row="5" column="0">
+               <widget class="QLabel" name="label_3">
                 <property name="text">
-                 <string>Use Saves?</string>
+                 <string>Armor Class:</string>
+                </property>
+               </widget>
+              </item>
+              <item row="9" column="0">
+               <widget class="QLabel" name="label_5">
+                <property name="text">
+                 <string>Hit Dice:</string>
                 </property>
                </widget>
               </item>
@@ -409,17 +272,45 @@
                 </property>
                </widget>
               </item>
-              <item row="11" column="3">
-               <widget class="QLabel" name="label_10">
+              <item row="4" column="6">
+               <widget class="QSpinBox" name="dprSpinBox"/>
+              </item>
+              <item row="11" column="6">
+               <widget class="QComboBox" name="saveComboBox">
+                <item>
+                 <property name="text">
+                  <string>0-2</string>
+                 </property>
+                </item>
+                <item>
+                 <property name="text">
+                  <string>3-4</string>
+                 </property>
+                </item>
+                <item>
+                 <property name="text">
+                  <string>5-6</string>
+                 </property>
+                </item>
+               </widget>
+              </item>
+              <item row="8" column="6">
+               <widget class="QCheckBox" name="vulCheckBox">
                 <property name="text">
-                 <string>Save Proficiencies</string>
+                 <string>Vulnerabilities:</string>
                 </property>
                </widget>
               </item>
-              <item row="8" column="4">
-               <widget class="QCheckBox" name="checkBox_2">
+              <item row="5" column="6">
+               <widget class="QSpinBox" name="attkBonSpinBox"/>
+              </item>
+              <item row="10" column="2">
+               <widget class="QSpinBox" name="constitSpinBox"/>
+              </item>
+              <item row="8" column="0">
+               <widget class="QLabel" name="label_4">
                 <property name="text">
-                 <string>Vulnerabilities:</string>
+                 <string>Size:</string>
                 </property>
                </widget>
               </item>
@@ -430,7 +321,7 @@
                 </property>
                </widget>
               </item>
-              <item row="1" column="4">
+              <item row="1" column="6">
                <spacer name="horizontalSpacer_6">
                 <property name="orientation">
                  <enum>Qt::Horizontal</enum>
@@ -443,35 +334,153 @@
                 </property>
                </spacer>
               </item>
-              <item row="10" column="3">
-               <widget class="QLabel" name="label_11">
-                <property name="text">
-                 <string>Flies and can deal damage at range (CR 0-9 only):</string>
+              <item row="8" column="2">
+               <widget class="QComboBox" name="sizeComboBox">
+                <item>
+                 <property name="text">
+                  <string>Tiny</string>
+                 </property>
+                </item>
+                <item>
+                 <property name="text">
+                  <string>Small</string>
+                 </property>
+                </item>
+                <item>
+                 <property name="text">
+                  <string>Medium</string>
+                 </property>
+                </item>
+                <item>
+                 <property name="text">
+                  <string>Large</string>
+                 </property>
+                </item>
+                <item>
+                 <property name="text">
+                  <string>Huge</string>
+                 </property>
+                </item>
+                <item>
+                 <property name="text">
+                  <string>Gargantuan</string>
+                 </property>
+                </item>
+               </widget>
+              </item>
+              <item row="11" column="0">
+               <widget class="QLineEdit" name="sliderValTxt">
+                <property name="maximumSize">
+                 <size>
+                  <width>115</width>
+                  <height>16777215</height>
+                 </size>
                 </property>
                </widget>
               </item>
-              <item row="10" column="4">
-               <widget class="QCheckBox" name="checkBox_3">
+              <item row="10" column="6">
+               <widget class="QCheckBox" name="fliesCheckBox">
                 <property name="text">
-                 <string>CheckBox</string>
+                 <string/>
                 </property>
                </widget>
               </item>
-              <item row="4" column="3">
-               <widget class="QLabel" name="label_7">
+              <item row="4" column="0">
+               <widget class="QLabel" name="label_2">
+                <property name="font">
+                 <font>
+                  <pointsize>12</pointsize>
+                 </font>
+                </property>
                 <property name="text">
-                 <string>Damage Per Round:</string>
+                 <string>Hit Points:</string>
                 </property>
                </widget>
               </item>
-              <item row="8" column="0">
-               <widget class="QLabel" name="label_4">
+              <item row="7" column="6">
+               <widget class="QCheckBox" name="savesCheckBox">
                 <property name="text">
-                 <string>Size:</string>
+                 <string>Use Saves?</string>
                 </property>
                </widget>
               </item>
-              <item row="11" column="1" colspan="2">
+              <item row="9" column="3" colspan="2">
+               <widget class="QLabel" name="diceLabel">
+                <property name="font">
+                 <font>
+                  <bold>true</bold>
+                 </font>
+                </property>
+                <property name="text">
+                 <string>d</string>
+                </property>
+                <property name="alignment">
+                 <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+                </property>
+               </widget>
+              </item>
+              <item row="1" column="5">
+               <widget class="QLabel" name="label_8">
+                <property name="font">
+                 <font>
+                  <pointsize>20</pointsize>
+                 </font>
+                </property>
+                <property name="text">
+                 <string>Offenisive</string>
+                </property>
+               </widget>
+              </item>
+              <item row="5" column="5">
+               <widget class="QLabel" name="label_9">
+                <property name="text">
+                 <string>Attack Bonus/Save DC:</string>
+                </property>
+               </widget>
+              </item>
+              <item row="11" column="5">
+               <widget class="QLabel" name="label_10">
+                <property name="text">
+                 <string>Save Proficiencies</string>
+                </property>
+               </widget>
+              </item>
+              <item row="1" column="2" colspan="3">
+               <spacer name="horizontalSpacer_4">
+                <property name="orientation">
+                 <enum>Qt::Horizontal</enum>
+                </property>
+                <property name="sizeHint" stdset="0">
+                 <size>
+                  <width>40</width>
+                  <height>20</height>
+                 </size>
+                </property>
+               </spacer>
+              </item>
+              <item row="4" column="2">
+               <widget class="QSpinBox" name="hitPointsSpinBox"/>
+              </item>
+              <item row="9" column="6">
+               <widget class="QComboBox" name="resComboBox">
+                <item>
+                 <property name="text">
+                  <string>None</string>
+                 </property>
+                </item>
+                <item>
+                 <property name="text">
+                  <string>Resistances</string>
+                 </property>
+                </item>
+                <item>
+                 <property name="text">
+                  <string>Immunities</string>
+                 </property>
+                </item>
+               </widget>
+              </item>
+              <item row="11" column="1" colspan="4">
                <widget class="QSlider" name="slider">
                 <property name="orientation">
                  <enum>Qt::Horizontal</enum>
@@ -481,17 +490,45 @@
                 </property>
                </widget>
               </item>
+              <item row="0" column="2" colspan="2">
+               <widget class="QLineEdit" name="exCRLineEdit">
+                <property name="text">
+                 <string>0</string>
+                </property>
+               </widget>
+              </item>
               <item row="5" column="2">
-               <widget class="QSpinBox" name="spinBox_8"/>
+               <widget class="QSpinBox" name="ArmorSpinBox"/>
               </item>
-              <item row="5" column="4">
-               <widget class="QSpinBox" name="spinBox_9"/>
+              <item row="0" column="0">
+               <widget class="QLabel" name="label_13">
+                <property name="maximumSize">
+                 <size>
+                  <width>16777215</width>
+                  <height>40</height>
+                 </size>
+                </property>
+                <property name="text">
+                 <string>Expected CR:</string>
+                </property>
+               </widget>
               </item>
-              <item row="4" column="4">
-               <widget class="QSpinBox" name="spinBox_10"/>
+              <item row="4" column="5">
+               <widget class="QLabel" name="label_7">
+                <property name="text">
+                 <string>Damage Per Round:</string>
+                </property>
+               </widget>
               </item>
-              <item row="10" column="2">
-               <widget class="QLineEdit" name="lineEdit_9"/>
+              <item row="9" column="2">
+               <widget class="QSpinBox" name="diceSpinBox">
+                <property name="minimumSize">
+                 <size>
+                  <width>244</width>
+                  <height>0</height>
+                 </size>
+                </property>
+               </widget>
               </item>
              </layout>
             </widget>
