--- a/UI/mainScreen.ui
+++ b/UI/mainScreen.ui
@@ -69,15 +69,15 @@
               <enum>QFrame::Raised</enum>
              </property>
              <layout class="QGridLayout" name="gridLayout_3">
-              <item row="0" column="1">
-               <widget class="QLineEdit" name="nameLineEdit"/>
-              </item>
               <item row="0" column="0">
                <widget class="QLabel" name="label_14">
                 <property name="text">
                  <string>Name:</string>
                 </property>
                </widget>
+              </item>
+              <item row="0" column="1">
+               <widget class="QLineEdit" name="nameLineEdit"/>
               </item>
               <item row="1" column="0">
                <widget class="QLabel" name="label_15">
@@ -87,7 +87,7 @@
                </widget>
               </item>
               <item row="1" column="1">
-               <widget class="QLineEdit" name="speedLineEdit"/>
+               <widget class="QSpinBox" name="SpeedSpinBox"/>
               </item>
              </layout>
             </widget>
@@ -107,27 +107,7 @@
               <enum>QFrame::Raised</enum>
              </property>
              <layout class="QGridLayout" name="gridLayout_4">
-              <item row="0" column="3">
-               <widget class="QLabel" name="label_19">
-                <property name="text">
-                 <string>INT</string>
-                </property>
-                <property name="alignment">
-                 <set>Qt::AlignCenter</set>
-                </property>
-               </widget>
-              </item>
-              <item row="0" column="0">
-               <widget class="QLabel" name="label_16">
-                <property name="text">
-                 <string>STR</string>
-                </property>
-                <property name="alignment">
-                 <set>Qt::AlignCenter</set>
-                </property>
-               </widget>
-              </item>
-              <item row="0" column="1">
+              <item row="0" column="2">
                <widget class="QLabel" name="label_17">
                 <property name="text">
                  <string>DEX</string>
@@ -137,7 +117,13 @@
                 </property>
                </widget>
               </item>
-              <item row="0" column="5">
+              <item row="1" column="2">
+               <widget class="QSpinBox" name="dexSpinBox"/>
+              </item>
+              <item row="1" column="4">
+               <widget class="QSpinBox" name="conSpinBox"/>
+              </item>
+              <item row="0" column="10">
                <widget class="QLabel" name="label_21">
                 <property name="text">
                  <string>CHA</string>
@@ -147,7 +133,7 @@
                 </property>
                </widget>
               </item>
-              <item row="0" column="4">
+              <item row="0" column="8">
                <widget class="QLabel" name="label_20">
                 <property name="text">
                  <string>WIS</string>
@@ -157,7 +143,7 @@
                 </property>
                </widget>
               </item>
-              <item row="0" column="2">
+              <item row="0" column="4">
                <widget class="QLabel" name="label_18">
                 <property name="text">
                  <string>CON</string>
@@ -171,21 +157,77 @@
                <widget class="QSpinBox" name="strSpinBox"/>
               </item>
               <item row="1" column="1">
-               <widget class="QSpinBox" name="dexSpinBox"/>
+               <widget class="QLabel" name="label_22">
+                <property name="text">
+                 <string>TextLabel</string>
+                </property>
+               </widget>
               </item>
-              <item row="1" column="2">
-               <widget class="QSpinBox" name="conSpinBox"/>
+              <item row="0" column="6">
+               <widget class="QLabel" name="label_19">
+                <property name="text">
+                 <string>INT</string>
+                </property>
+                <property name="alignment">
+                 <set>Qt::AlignCenter</set>
+                </property>
+               </widget>
               </item>
-              <item row="1" column="3">
-               <widget class="QSpinBox" name="intSpinBox"/>
-              </item>
-              <item row="1" column="4">
+              <item row="1" column="8">
                <widget class="QSpinBox" name="wisSpinBox"/>
               </item>
+              <item row="1" column="3">
+               <widget class="QLabel" name="label_23">
+                <property name="text">
+                 <string>TextLabel</string>
+                </property>
+               </widget>
+              </item>
               <item row="1" column="5">
+               <widget class="QLabel" name="label_24">
+                <property name="text">
+                 <string>TextLabel</string>
+                </property>
+               </widget>
+              </item>
+              <item row="0" column="0">
+               <widget class="QLabel" name="label_16">
+                <property name="text">
+                 <string>STR</string>
+                </property>
+                <property name="alignment">
+                 <set>Qt::AlignCenter</set>
+                </property>
+               </widget>
+              </item>
+              <item row="1" column="7">
+               <widget class="QLabel" name="label_25">
+                <property name="text">
+                 <string>TextLabel</string>
+                </property>
+               </widget>
+              </item>
+              <item row="1" column="6">
+               <widget class="QSpinBox" name="intSpinBox"/>
+              </item>
+              <item row="1" column="10">
                <widget class="QSpinBox" name="chaSpinBox">
                 <property name="maximum">
                  <number>30</number>
+                </property>
+               </widget>
+              </item>
+              <item row="1" column="9">
+               <widget class="QLabel" name="label_26">
+                <property name="text">
+                 <string>TextLabel</string>
+                </property>
+               </widget>
+              </item>
+              <item row="1" column="11">
+               <widget class="QLabel" name="label_27">
+                <property name="text">
+                 <string>TextLabel</string>
                 </property>
                </widget>
               </item>
@@ -338,6 +380,11 @@
                <widget class="QComboBox" name="sizeComboBox">
                 <item>
                  <property name="text">
+                  <string/>
+                 </property>
+                </item>
+                <item>
+                 <property name="text">
                   <string>Tiny</string>
                  </property>
                 </item>
@@ -458,6 +505,16 @@
                 </property>
                </spacer>
               </item>
+              <item row="9" column="2">
+               <widget class="QSpinBox" name="diceSpinBox">
+                <property name="minimumSize">
+                 <size>
+                  <width>244</width>
+                  <height>0</height>
+                 </size>
+                </property>
+               </widget>
+              </item>
               <item row="4" column="2">
                <widget class="QSpinBox" name="hitPointsSpinBox"/>
               </item>
@@ -478,16 +535,6 @@
                   <string>Immunities</string>
                  </property>
                 </item>
-               </widget>
-              </item>
-              <item row="11" column="1" colspan="4">
-               <widget class="QSlider" name="slider">
-                <property name="orientation">
-                 <enum>Qt::Horizontal</enum>
-                </property>
-                <property name="tickPosition">
-                 <enum>QSlider::TicksAbove</enum>
-                </property>
                </widget>
               </item>
               <item row="0" column="2" colspan="2">
@@ -520,13 +567,13 @@
                 </property>
                </widget>
               </item>
-              <item row="9" column="2">
-               <widget class="QSpinBox" name="diceSpinBox">
-                <property name="minimumSize">
-                 <size>
-                  <width>244</width>
-                  <height>0</height>
-                 </size>
+              <item row="11" column="1" colspan="4">
+               <widget class="QSlider" name="slider">
+                <property name="orientation">
+                 <enum>Qt::Horizontal</enum>
+                </property>
+                <property name="tickPosition">
+                 <enum>QSlider::TicksAbove</enum>
                 </property>
                </widget>
               </item>
