--- a/UI/TestMod.ui
+++ b/UI/TestMod.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>854</width>
-    <height>151</height>
+    <height>243</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -26,10 +26,45 @@
          <x>0</x>
          <y>0</y>
          <width>834</width>
-         <height>88</height>
+         <height>180</height>
         </rect>
        </property>
        <layout class="QGridLayout" name="gridLayout">
+        <item row="0" column="1">
+         <widget class="QLabel" name="label_2">
+          <property name="text">
+           <string>Enemy</string>
+          </property>
+          <property name="alignment">
+           <set>Qt::AlignCenter</set>
+          </property>
+         </widget>
+        </item>
+        <item row="4" column="1">
+         <widget class="QComboBox" name="comboBox_2"/>
+        </item>
+        <item row="0" column="3">
+         <widget class="QLabel" name="label_3">
+          <property name="text">
+           <string># of Rounds</string>
+          </property>
+          <property name="alignment">
+           <set>Qt::AlignCenter</set>
+          </property>
+         </widget>
+        </item>
+        <item row="3" column="1">
+         <widget class="QComboBox" name="comboBox"/>
+        </item>
+        <item row="2" column="1">
+         <widget class="QComboBox" name="enemyComboBox"/>
+        </item>
+        <item row="2" column="3">
+         <widget class="QSpinBox" name="roundSpinBox"/>
+        </item>
+        <item row="5" column="1">
+         <widget class="QComboBox" name="comboBox_3"/>
+        </item>
         <item row="0" column="0">
          <widget class="QLabel" name="label">
           <property name="text">
@@ -43,33 +78,29 @@
         <item row="2" column="0">
          <widget class="QComboBox" name="creatureComboBox"/>
         </item>
-        <item row="2" column="2">
-         <widget class="QSpinBox" name="roundSpinBox"/>
-        </item>
-        <item row="2" column="3">
+        <item row="2" column="4">
          <widget class="QPushButton" name="runTestButton">
           <property name="text">
            <string>Run Test!</string>
           </property>
          </widget>
         </item>
-        <item row="2" column="1">
-         <widget class="QComboBox" name="enemyComboBox"/>
+        <item row="2" column="2">
+         <widget class="QSpinBox" name="spinBox"/>
         </item>
-        <item row="0" column="1">
-         <widget class="QLabel" name="label_2">
-          <property name="text">
-           <string>Enemy</string>
-          </property>
-          <property name="alignment">
-           <set>Qt::AlignCenter</set>
-          </property>
-         </widget>
+        <item row="3" column="2">
+         <widget class="QSpinBox" name="spinBox_2"/>
+        </item>
+        <item row="4" column="2">
+         <widget class="QSpinBox" name="spinBox_3"/>
+        </item>
+        <item row="5" column="2">
+         <widget class="QSpinBox" name="spinBox_4"/>
         </item>
         <item row="0" column="2">
-         <widget class="QLabel" name="label_3">
+         <widget class="QLabel" name="label_4">
           <property name="text">
-           <string># of Rounds</string>
+           <string>Level</string>
           </property>
           <property name="alignment">
            <set>Qt::AlignCenter</set>
