--- a/UI/testRun.ui
+++ b/UI/testRun.ui
@@ -67,6 +67,9 @@
        </item>
        <item row="2" column="2">
         <widget class="QLabel" name="label_4">
+         <property name="enabled">
+          <bool>true</bool>
+         </property>
          <property name="text">
           <string>XYZ</string>
          </property>
@@ -94,6 +97,9 @@
        </item>
        <item row="4" column="0" colspan="3">
         <widget class="QPushButton" name="pushButton">
+         <property name="enabled">
+          <bool>false</bool>
+         </property>
          <property name="text">
           <string>Continue</string>
          </property>
