--- a/UI/TestMod.ui
+++ b/UI/TestMod.ui
@@ -77,7 +77,7 @@
          <widget class="QComboBox" name="enemyComboBox">
           <item>
            <property name="text">
-            <string>Barbabrian</string>
+            <string>Barbarian</string>
            </property>
           </item>
           <item>
@@ -130,7 +130,7 @@
          <widget class="QComboBox" name="enemyComboBox_2">
           <item>
            <property name="text">
-            <string>Barbabrian</string>
+            <string>Barbarian</string>
            </property>
           </item>
           <item>
@@ -169,7 +169,7 @@
          <widget class="QComboBox" name="enemyComboBox_3">
           <item>
            <property name="text">
-            <string>Barbabrian</string>
+            <string>Barbarian</string>
            </property>
           </item>
           <item>
@@ -208,7 +208,7 @@
          <widget class="QComboBox" name="enemyComboBox_4">
           <item>
            <property name="text">
-            <string>Barbabrian</string>
+            <string>Barbarian</string>
            </property>
           </item>
           <item>
